--- a/Exercicios/Exercicio4MapImagens/exercicio4MapImage.html
+++ b/Exercicios/Exercicio4MapImagens/exercicio4MapImage.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercicio4MapImage</title>
 </head>
+
 <body>
     <h1>Mapeamento de Imagem</h1>
     <img src="img/imagemMap.jpg" alt="imagem escritório" usemap="#figura">
 
-<map name="figura">
-    <area target="" alt="Notebook" title="Notebook" href="notebook.html" coords="171,376,435,379,430,212,432,53,175,47,183,201,185,211,181,239,179,293,174,315,175,340" shape="poly">
-    <area target="" alt="blocoNote" title="blocoNote" href="blocoDeNota.html" coords="3,323,112,370,173,238,81,202" shape="poly">
-    <area target="" alt="xicara" title="xicara" href="xicara.html" coords="505,327,50" shape="circle">
-    <area target="" alt="celular" title="celular" href="celular.html" coords="451,268,502,186" shape="rect">
-</map>
-    
+    <map name="figura">
+        <area target="" alt="Notebook" title="Notebook" href="notebook.html"
+            coords="171,376,435,379,430,212,432,53,175,47,183,201,185,211,181,239,179,293,174,315,175,340" shape="poly">
+        <area target="" alt="blocoNote" title="blocoNote" href="blocoDeNota.html" coords="3,323,112,370,173,238,81,202"
+            shape="poly">
+        <area target="" alt="xicara" title="xicara" href="xicara.html" coords="505,327,50" shape="circle">
+        <area target="" alt="celular" title="celular" href="celular.html" coords="451,268,502,186" shape="rect">
+    </map>
+
 </body>
+
 </html>
