--- a/Exercicios/Exercicio5Formularios/cadastro.html
+++ b/Exercicios/Exercicio5Formularios/cadastro.html
@@ -11,15 +11,15 @@
 <body>
     <h2>Página de Cadastro</h2>
     <form>
-        <label for="pmail" title="Mail">E-mail:</label>
+        <label for="pmail" title="Mail">E-mail:</label> 
         <input type="text" name="e-mail" id="pmail" />
         <label for="psenha" title="Senha">Senha:</label>
         <input type="password" name="senha" id="psenha" />
         <hr />
         <label for="pnome" title="nome">Nome:</label>
-        <input type="text" name="nome" id="pnome" />
+        <input type="text" name="nome" id="pnome"placeholder="Seu nome" />
         <label for="psnome" title="snome">Sobrenome:</label>
-        <input type="text" name="snome" id="psnome" />
+        <input type="text" name="snome" id="psnome" placeholder="Seu sobrenome" />
         <br />
         <input type="submit" value="" Enviar" />
         <input type="reset" value="" Limpar />
