--- a/Exercicios/Exercicio5Formularios/login.html
+++ b/Exercicios/Exercicio5Formularios/login.html
@@ -10,13 +10,14 @@
     <h2>Página de Login</h2>
     <br/>
     <form>
-        <label for="pmail" title="Mail">Email:</label>
-                <input type="text" name="e-mail" id="pmail" />
+        <label for="pmail" title="Mail">Email:</label> <!--escrever "Email:" para depois criar campo que recebera a informação-->
+                <input type="text" name="e-mail" id="pmail" /> <!--inserir campo para receber informação do usuario-->
                 <br/>
-        <label for="psenha" title="Senha">Senha:</label>
-                <input type="password" name="senha" id="psenha" />
+        <label for="psenha" title="Senha">Senha:</label> <!--escrever "Email:" para depois criar campo que recebera a informação-->
+                <input type="password" name="senha" id="psenha" /> <!--inserir campo para receber informação do usuario-->
                 <hr/>
-                <input type="submit" value="Enviar"/>
+                <input type="submit" value="Enviar"/><!--criando botão "enviar"-->
+                <INPUT TYPE="button" VALUE="Voltar" onclick="parent.location='formularios.html' "> <!--criando botão "voltar"-->
 
 
     </form>
