--- a/Exercicios/Exercicio5Formularios/formularios.html
+++ b/Exercicios/Exercicio5Formularios/formularios.html
@@ -10,9 +10,11 @@
     <h1>Formulários</h1>
     <h2>Utilizando elementos do Formulário</h2> 
     <h3>Faça seu login</h3>
-    <a href="login.html">Clique Aqui</a>
+    <a href="login.html">Clique Aqui</a> <!--referenciando com a pagina "login"-->
     <h3>Faça seu Cadastro</h3>
-    <a href="cadastro.html">Clique Aqui</a>
+    <a href="cadastro.html">Clique Aqui</a> <!--referenciando com a pagina "Cadastro""-->
+    <h3>Faça seu Cadastro2</h3>
+    <a href="cadastro2.html">Clique Aqui</a> <!--referenciando com a pagina "Cadastro2"-->
     
 </body>
 </html>
