--- a/Exercicios/Exercicio5Formularios/cadastro.html
+++ b/Exercicios/Exercicio5Formularios/cadastro.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <iframe src="header.html" frameborder="0"></iframe>
     <h2>Página de Cadastro</h2>
     <form>
         <label for="pmail" title="Mail">E-mail:</label> 
@@ -29,9 +30,9 @@
         <input type="submit" value="Enviar os dados" /> <!--cirando botão enviar dados-->
         <input type="reset" value="Limpar os dados" /> <!--criando botão limpar dados-->
         <INPUT TYPE="button" VALUE="Voltar" onclick="parent.location='formularios.html' "> <!-- criando botão voltar pargina "formularios"-->
-
+          <br>
     </form>
-
+    <iframe src="footer.html" frameborder="0"></iframe>
 </body>
 
 </html>
