--- a/Exercicios/Exercicio5Formularios/cadastro2.html
+++ b/Exercicios/Exercicio5Formularios/cadastro2.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <body>
+        <iframe src="header.html" frameborder="0"></iframe>
         <FORM ACTION="mailto:digogo@gmail.com" METHOD="POST" ENCTYPE="text/plain" NAME="cadastro">
             <p> Por favor, preencha os campos abaixo e depois clique no botão Enviar. Caso
                 necessite apagar os dados, dê um clique no botão Limpar.<br> Muito Obrigado!
@@ -45,7 +46,8 @@
             <INPUT TYPE="SUBMIT" VALUE="Enviar os dados">
             <INPUT TYPE="RESET" VALUE="Limpar os dados">
             <INPUT TYPE="button" VALUE="Voltar" onclick="parent.location='formularios.html' ">
-              
+                <br>
+                <iframe src="footer.html" frameborder="0"></iframe>
         </FORM>
     </body>
 </body>
