--- a/Exercicios/Exercicio5Formularios/formularios.html
+++ b/Exercicios/Exercicio5Formularios/formularios.html
@@ -7,6 +7,7 @@
     <title>Formulários</title>
 </head>
 <body>
+    <iframe src="header.html" frameborder="0"></iframe>
     <h1>Formulários</h1>
     <h2>Utilizando elementos do Formulário</h2> 
     <h3>Faça seu login</h3>
@@ -15,6 +16,11 @@
     <a href="cadastro.html">Clique Aqui</a> <!--referenciando com a pagina "Cadastro""-->
     <h3>Faça seu Cadastro2</h3>
     <a href="cadastro2.html">Clique Aqui</a> <!--referenciando com a pagina "Cadastro2"-->
+<br>
+<iframe src="footer.html" frameborder="0"></iframe>
     
 </body>
+
+   
+
 </html>
