--- a/Exercicios/SemanticaCSS/index.html
+++ b/Exercicios/SemanticaCSS/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -12,13 +12,14 @@
 <body>
     <header>
         <nav id="menu">
-            <img src= "img/lojaonline.webp"  alt="lojaonline" >
+            <img src= "img/lojaonline.webp"  alt="lojaOlin" >
             <a href="" class="linkMenu"> Sobre Nós </a>
             <a href="" class="linkMenu"> Roupas </a>
             <a href="" class="linkMenu"> Móveis </a>
             <a href="" class="linkMenu"> Eletrônicos </a>
-            <a href="" class="linkMenu"> Contador </a>
-            <a href="" class="linkMenu"> Login </a>
+            <a href="" class="linkMenu"> Contato </a>
+            <a href="login.html" class="linkMenu"> Login </a>
+            
         </na>
     </header>
     <div class="parte1">
