--- a/Exercicios/SemanticaCSS/login.html
+++ b/Exercicios/SemanticaCSS/login.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body id="bodyLogin">
-   <h1></h1>
+    <h1>Página de Login</h1>
+    </br>
+    </br>
+    <form>
+        <label for="pmail" title="Mail">Email:</label>
+        <input type="text" name="e-mail" id="pmail" />
+    </br>
+    </br>
+        <label for="psenha" title="Senha">Senha:</label>
+        <input type="password" name="senha" id="psenha" /> 
+    </br>
+    </br>
+     
+        <input type="submit" value="Enviar" />
+        <INPUT TYPE="button" VALUE="Voltar" onclick="parent.location='index.html' "> 
+        <INPUT TYPE="RESET" VALUE="Limpar os dados">
+    </br>
+    </br>
+    
 
+    </form>
 </body>
+
 </html>
