--- a/Exercicios/SemanticaCSS/contato.html
+++ b/Exercicios/SemanticaCSS/contato.html
@@ -8,22 +8,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body id="bodyLogin">
+
+<body id="bodyContato">
     <h1>Página de Contato</h1>
-    </br>
-    </br>
+
+
     <form>
-     
-    </br>
-    </br>
-     <textarea></textarea>
-    </br>
+
+
+        </br>
+        <textarea></textarea>
+        </br>
         <input type="submit" value="Enviar" />
-        <INPUT TYPE="button" VALUE="Voltar" onclick="parent.location='index.html' "> 
+        <INPUT TYPE="button" VALUE="Voltar" onclick="parent.location='index.html' ">
         <INPUT TYPE="RESET" VALUE="Limpar os dados">
-    </br>
-    </br>
-    <img src= "img/contato.png"  alt="Imagem Contato" width="1000px" height="300px" >
+        </br>
+        </br>
+        <img src="img/contato.png" alt="Imagem Contato" width="200px" height="100px">
 
     </form>
 </body>
