--- a/Exercicios/ResponsividadeMQ/index.html
+++ b/Exercicios/ResponsividadeMQ/index.html
@@ -15,7 +15,7 @@
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam fugiat, doloremque optio eius error corrupti maiores aut, laudantium modi et blanditiis natus nihil dignissimos, iure alias nesciunt eum? Repellat, sed.
             </p>
-            <a class=""btn-banner" href="a" target="_blank">
+            <a class="btn-banner" href="a" target="_blank">
                 Saiba mais
             </a> 
         </section>
