--- a/Exercicios/ResponsividadeMQ/index.html
+++ b/Exercicios/ResponsividadeMQ/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css"> <!-- linkando com css -->
 </head>
 <body>
+    <header></header>
     <div class="banner">
         <img src="img/banner.jfif"    alt="a imagem está aqui">
         <section class="texto">
