--- a/Exercicios/ResponsExercicio1/index.html
+++ b/Exercicios/ResponsExercicio1/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css"> <!-- linkando com css -->
 </head>
 <body>
+    <header>
+        <div nav="menu">
+            <img src= "img/Senai.jpg"  alt="Logo SENAI" >
+            <a href="" class="linkMenu"> Sobre Nós </a>
+            <a href="" class="linkMenu"> Roupas </a>
+            <a href="" class="linkMenu"> Móveis </a>
+            <a href="" class="linkMenu"> Eletrônicos </a>
+        </div>
+    </header>
     <div class="banner">
         <img src="img/banner.jfif"    alt="a imagem está aqui">
         <section class="texto">
