--- a/Exercicios/ResponsExercicio1/index.html
+++ b/Exercicios/ResponsExercicio1/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div nav="menu">
-            <img src= "img/Senai.jpg"  alt="Logo SENAI" >
+            <img src= "img/Senai.jpg"  alt="Logo SENAI" width="10%" >
             <a href="" class="linkMenu"> Sobre Nós </a>
             <a href="" class="linkMenu"> Roupas </a>
             <a href="" class="linkMenu"> Móveis </a>
