--- a/Exercicios/AtividadeSituacional 24-03-23/Exercicio1/index.html
+++ b/Exercicios/AtividadeSituacional 24-03-23/Exercicio1/index.html
@@ -7,8 +7,51 @@
     <title>Exercicio1</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<header>
+    <div class="head">
+        <img src="img/f1Logo.png" alt="Logo F1" >
+        <h1>Formula 1 Temporada 2022</h1>
+        <a href="tabelaCorrida.html" class="linkMenu">Classificação</a>
+    </div>
+</header>
 <body>
+<div class="noticias">
+    <h1>Noticias</h1>
+</div>
+<div class="texto1">
+    <h3>Lista das Campeãs do ano</h3>
+    <ol>
+    <li>Red Bull Racing <img src="img/Austria.png" alt="Bandeira Austria" width="2%" height="25px"></li>
+    <li>Ferrari <img src="img/Italia.png" alt="Bandeira Italia" width="2%" height="25px"> </li>
+    <li>Mercedes <img src="img/Alemanha.png" alt="Bandeira Alemanha" width="2%" height="25px"> </li>
+    </ol>
+</a>
+<div class="texto2">
+    <h2>Lista de equiper participantes</h2>
+    <ul>
+        <li>Alpine</li>
+        <li>McLare</li>
+        <li>Alfa Romeo</li>
+        <li>Aston Martin Racing</li>
+        <li>Haas F1 Team</li>
+        <li>AlphaTauri</li>
+        <li>Williams</li>
+    </ul>
+
+    <h3>Pilotos Campeões</h3>
+    <ul>1ºMax Verstappen - Piloto nascido na Holanda em 30/09/1997</ul>
+    <ul>Charles Leclerc - Piloto Frances, nascido em Monaco em 16/101997</ul>
+    <ul>Sergio Perez - Piloto nascido no México em 1990-01-26</ul>
+</div>
 
     
+</div>
 </body>
+
+
+
+
+
+    
+
 </html>
