--- a/Exercicios/AtividadeSituacional 24-03-23/AtividadeGrupo/sobreNos.html
+++ b/Exercicios/AtividadeSituacional 24-03-23/AtividadeGrupo/sobreNos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,45 +8,50 @@
     <title>Sobre Nós</title>
     <link rel="stylesheet" href="styleSobreNos.css">
 </head>
+
 <body>
     <div class="navSobre">
         <img src="img/starbucks-nav-logo.svg" alt="Logo Starbuckas">
         <div class="links">
-        <a href="home.html">HOME</a>
-        <a href="">|</a>
-        <a href="encontreUmaLoja.html">ENCONTRE UMA LOJA</a>
+            <a href="index.html">HOME</a>
+            <a href="">|</a>
+            <a href="encontreUmaLoja.html">ENCONTRE UMA LOJA</a>
+            <a href="">|</a>
+            <a href="sobreNos.html">Sobre nós</a>
+        </div>
     </div>
-</div>
     <div class="historia">
-    <div class="caixaTexto">
-    <h1>Sobre Nós</h1>
-    </div>
-    <img src="img/images1.jfif" alt="Imagem LOGO">
-    </a>
+        <div class="caixaTexto">
+            <h1>Sobre Nós</h1>
+        </div>
+        <img src="img/images1.jfif" alt="Imagem LOGO">
+        </a>
     </div>
     <div class="texto">
         <div class="missao">
-    <h3>MISSÃO STARBUCKS</h3>
-    <h4>
-        Todos os dias esperamos fazer duas coisas:
-         dividir um ótimo café com nossos amigos e ajudar a tornar o mundo um pouquinho melhor. 
-         Já era assim quando a primeira Starbucks abriu em 1971 e continua sendo assim até hoje.
-    </h4>
-    <img src="img/missao.jfif" alt="imagem happy">
-</div>
-</br>
+            <h3>MISSÃO STARBUCKS</h3>
+            <h4>
+                Todos os dias esperamos fazer duas coisas:
+                dividir um ótimo café com nossos amigos e ajudar a tornar o mundo um pouquinho melhor.
+                Já era assim quando a primeira Starbucks abriu em 1971 e continua sendo assim até hoje.
+            </h4>
+            <img src="img/missao.jfif" alt="imagem happy">
+        </div>
+        </br>
         <div class="nossoCafe">
-        <h3>Nosso café</h3>
-        <h4>
-        Sempre acreditamos em servir o melhor café possível. 
-        Nosso objetivo é que todo o nosso café seja cultivado sob os mais altos padrões de qualidade, 
-        usando práticas éticas de fornecimento. 
-        Nossos compradores de café viajam pessoalmente para fazendas de café na América Latina, 
-        África e Ásia para selecionar grãos de alta qualidade. 
-        E os nossos torrefadores principais trazem o equilíbrio e o sabor rico dos grãos através da assinatura Starbucks Roast.
-        </h4>
-        <img src="img/graoCafe.jfif" alt="imagem café">
+            <h3>Nosso café</h3>
+            <h4>
+                Sempre acreditamos em servir o melhor café possível.
+                Nosso objetivo é que todo o nosso café seja cultivado sob os mais altos padrões de qualidade,
+                usando práticas éticas de fornecimento.
+                Nossos compradores de café viajam pessoalmente para fazendas de café na América Latina,
+                África e Ásia para selecionar grãos de alta qualidade.
+                E os nossos torrefadores principais trazem o equilíbrio e o sabor rico dos grãos através da assinatura
+                Starbucks Roast.
+            </h4>
+            <img src="img/graoCafe.jfif" alt="imagem café">
+        </div>
     </div>
-</div>
 </body>
+
 </html>
