--- a/Exercicios/ResponsExercicio2/Iindex.html
+++ b/Exercicios/ResponsExercicio2/Iindex.html
@@ -17,6 +17,13 @@
     </div>
     <img class="hamb" src="img/hambLogo.png" alt="logo hamb" >
     </header>
-    
+    <div class="parte1">
+    <div class="text">
+    </br>
+        <h1>DESENVOLVIMENTO</h1>
+        <h1>DE SISTEMAS 2022</h1>
+        <p>SENAI - INFORMÁTICA</p>
+    </div>
+</div>
 </body>
 </html>
