--- a/Exercicios/ResponsExercicio2/index.html
+++ b/Exercicios/ResponsExercicio2/index.html
@@ -17,13 +17,25 @@
     </div>
     <img class="hamb" src="img/hambLogo.png" alt="logo hamb" >
     </header>
-    <div class="parte1">
-    <div class="text">
-    </br>
-        <h1>DESENVOLVIMENTO</h1>
-        <h1>DE SISTEMAS 2022</h1>
-        <p>SENAI - INFORMÁTICA</p>
+    <section class="parte1">
+    <div class="titulo">
+        <h1>DESENVOLVIMENTO DE SISTEMAS 2022</h1>
+        <h2>SENAI - INFORMÁTICA</h2>
+        <img src="img/pcImg.png" alt="Logo Informatica">
     </div>
-</div>
+    </section>
+<section class="parte2">
+    <h1>SOBRE OS PROJETOS</h1>
+</section>
+<section class="parte3">
+    <img src="" alt="imagem">
+    <div class="texto">
+        <h1>MAIS DE 80 ALUNOS EM 16 GRUPOS</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, enim, dolores hic temporibus sint voluptatibus nisi mollitia unde animi atque architecto neque saepe. Dolorum, perspiciatis. Libero provident magni eum temporibus!</p>
+    </div>
+</section>
+
+
+
 </body>
 </html>
