--- a/Exercicios/ResponsExercicio2/index.html
+++ b/Exercicios/ResponsExercicio2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,35 +8,39 @@
     <title>Minha Pagina</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <img src="img/Senai.jpg" alt="logo">
         <div class="menu">
-        <a href="" class="link">INÍCIO</a>
-        <a href="" class="link">SOBRE</a>
-        <a href="" class="link">ENDEREÇO</a>
-    </div>
-    <img class="hamb" src="img/hambLogo.png" alt="logo hamb" >
+            <a href="" class="link">INÍCIO</a>
+            <a href="" class="link">SOBRE</a>
+            <a href="" class="link">ENDEREÇO</a>
+        </div>
+        <img class="hamb" src="img/hambLogo.png" alt="logo hamb">
     </header>
     <section class="parte1">
-    <div class="titulo">
-        <h1>DESENVOLVIMENTO DE SISTEMAS 2022</h1>
-        <h2>SENAI - INFORMÁTICA</h2>
-        <img src="img/pcImg.png" alt="Logo Informatica">
-    </div>
+        <div class="titulo">
+            <h1>DESENVOLVIMENTO DE SISTEMAS 2022</h1>
+            <h2>SENAI - INFORMÁTICA</h2>
+            <img src="img/pcImg.png" alt="Logo Informatica">
+        </div>
     </section>
-<section class="parte2">
-    <h1>SOBRE OS PROJETOS</h1>
-</section>
-<section class="parte3">
-    <img src="" alt="imagem">
-    <div class="texto">
-        <h1>MAIS DE 80 ALUNOS EM 16 GRUPOS</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, enim, dolores hic temporibus sint voluptatibus nisi mollitia unde animi atque architecto neque saepe. Dolorum, perspiciatis. Libero provident magni eum temporibus!</p>
-    </div>
-</section>
+    <section class="parte2">
+        <h1>SOBRE OS PROJETOS</h1>
+    </section>
+    <section class="parte3">
+        <img src="" alt="imagem">
+        <div class="texto">
+            <h1>MAIS DE 80 ALUNOS EM 16 GRUPOS</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, enim, dolores hic temporibus sint
+                voluptatibus nisi mollitia unde animi atque architecto neque saepe. Dolorum, perspiciatis. Libero
+                provident magni eum temporibus!</p>
+        </div>
+    </section>
 
 
 
 </body>
+
 </html>
