--- a/Exercicios/BootstrapGrid/index.html
+++ b/Exercicios/BootstrapGrid/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BootstrapGrid</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
-        <div class="row"></div> <!-- linha -->
-        <div class="col-6" style="background-color: pink;" >coluna 6 partes</div> <!-- coluna 6x -->
-        <div class="col-6" style="background-color: blue;">coluna 6 partes</div> <!-- coluna 6x -->
+    <div class="container"> <!-- "container-fluid" para ocupar todo espaço da pagina (largura)-->
+        <div class="row"> <!-- linha -->
+            <div class="col-6" style="background-color: pink;">coluna 6 partes</div> <!-- coluna 6x -->
+            <div class="col-6" style="background-color: blue;">coluna 6 partes</div> <!-- coluna 6x -->
+        </div>
+        <div class="row">
+            <div class="col-4" style="background-color: green;">coluna 4 partes</div>
+            <div class="col-4" style="background-color: brown;">coluna 4 partes</div>
+            <div class="col-4" style="background-color: yellow;">coluna 4 partes</div>
+        </div>
     </div>
 </body>
+
 </html>
