--- a/Exercicios/BootstrapGrid/exercicio1.html
+++ b/Exercicios/BootstrapGrid/exercicio1.html
@@ -14,64 +14,41 @@
 <body>
     <div class="container"> <!-- "container-fluid" para ocupar todo espaço da pagina (largura)-->
         <div class="row"> <!-- linha -->
-            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: pink;">coluna 1 partes
-            </div>
-            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: blue;">coluna 1 partes
-            </div>
-            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: green;">coluna 1 partes
-            </div>
-            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: brown;">coluna 1 partes
-            </div>
-            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: yellow;">coluna 1 partes
-            </div>
-            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: pink;">coluna 1 partes
-            </div>
-            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: blue;">coluna 1 partes
-            </div>
-            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: green;">coluna 1 partes
-            </div>
-            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: brown;">coluna 1 partes
-            </div>
-            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: yellow;">coluna 1 partes
-            </div>
-            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: pink;">coluna 1 partes
-            </div>
-            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: blue;">coluna 1 partes
-            </div>
+            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: pink;">coluna 1 partes </div>
+            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: blue;">coluna 1 partes </div>
+            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: green;">coluna 1 partes </div>
+            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: brown;">coluna 1 partes </div>
+            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: yellow;">coluna 1 partes </div>
+            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: pink;">coluna 1 partes </div>
+            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: blue;">coluna 1 partes </div>
+            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: green;">coluna 1 partes </div>
+            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: brown;">coluna 1 partes </div>
+            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: yellow;">coluna 1 partes </div>
+            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: pink;">coluna 1 partes </div>
+            <div class="col-1" style="border: 3px black; border-style:dotted; background-color: blue;">coluna 1 partes </div>
         </div>
         <div class="row">
-            <div class="col-4" style="border: 3px gold; border-style:dotted;  background-color: red;">coluna 4 partes
-            </div>
-            <div class="col-4" style="border: 3px gold; border-style:dotted;  background-color: purple;">coluna 4 partes
-            </div>
-            <div class="col-4" style="border: 3px gold; border-style:dotted;  background-color: blue;">coluna 4 partes
-            </div>
+            <div class="col-4" style="border: 3px gold; border-style:dotted;  background-color: red;">coluna 4 partes</div>
+            <div class="col-4" style="border: 3px gold; border-style:dotted;  background-color: purple;">coluna 4 partes</div>
+            <div class="col-4" style="border: 3px gold; border-style:dotted;  background-color: blue;">coluna 4 partes</div>
         </div>
         <div class="row">
-            <div class="col-6" style="border: 3px black; border-style:dotted;  background-color: blue;">coluna 6 partes
-            </div>
-            <div class="col-6" style="border: 3px black; border-style:dotted;  background-color: aliceblue;">coluna 6
-                partes</div>
+            <div class="col-6" style="border: 3px black; border-style:dotted;  background-color: blue;">coluna 6 partes</div>
+            <div class="col-6" style="border: 3px black; border-style:dotted;  background-color: aliceblue;">coluna 6 partes</div>
         </div>
         <div class="row">
-            <div class="col-12" style="border:3px red; border-style:dotted; background-color:green;">coluna 12 partes
-            </div>
+            <div class="col-12" style="border:3px red; border-style:dotted; background-color:green;">coluna 12 partes </div>
         </div>
         <div class="row">
-            <div class="col-4" style="border: 3px gold; border-style:dotted;  background-color: red;">coluna 4 partes
-            </div>
-            <div class="col-4 offset-4" style="border: 3px gold; border-style:dotted;  background-color: purple;">coluna
-                4 partes</div>
+            <div class="col-4" style="border: 3px gold; border-style:dotted;  background-color: red;">coluna 4 partes </div>
+            <div class="col-4 offset-4" style="border: 3px gold; border-style:dotted;  background-color: purple;">coluna 4 partes</div>
         </div>
         <div class="row">
-            <div class="col-3 offset-2" style="border: 3px blue; border-style:dotted;  background-color: gray;">coluna 3
-                partes</div>
-            <div class="col-3 offset-2" style="border: 3px orange; border-style:dotted;  background-color: coral;">
-                coluna 3 partes</div>
+            <div class="col-3 offset-2" style="border: 3px blue; border-style:dotted;  background-color: gray;">coluna 3 partes</div>
+            <div class="col-3 offset-2" style="border: 3px orange; border-style:dotted;  background-color: coral;">coluna 3 partes</div>
         </div>
         <div class="row">
-            <div class="col-4 offset-4" style="border: 3px blue; border-style:dotted;  background-color: greenyellow;">
-                coluna 4 partes</div>
+            <div class="col-4 offset-4" style="border: 3px blue; border-style:dotted;  background-color: greenyellow;">coluna 4 partes</div>
         </div>
     </div>
 
@@ -88,21 +65,17 @@
     <div class="container">
         <div class="row">
             <div class="col-4"
-                style="color: white; border: 3px white; border-style:dotted; background-color: rgb(0, 0, 0);">coluna 4
-                partes</div>
-            <div class="col-4" style="border: 3px black; border-style:dotted; background-color: white;">coluna 4 partes
-            </div>
+                style="color: white; border: 3px white; border-style:dotted; background-color: rgb(0, 0, 0);">coluna 4 partes</div>
+            <div class="col-4" style="border: 3px black; border-style:dotted; background-color: white;">coluna 4 partes</div>
             <div class="col-4" style="border: 3px black; border-style:dotted; background-color: red;">coluna 4</div>
         </div>
         <div class="row">
             <div class="col-4" style="background-color: gray;">coluna 4</div>
-            <div class="col-8" style="border: 3px black; border-style: dotted; background-color: grey;">coluna 8 partes
-            </div>
+            <div class="col-8" style="border: 3px black; border-style: dotted; background-color: grey;">coluna 8 partes </div>
         </div>
         <div class="row">
             <div class="col-4" style="background-color: grey;"></div>
-            <div class="col-4" style="border: 3px black; border-style:dotted; background-color: white;">coluna 4 partes
-            </div>
+            <div class="col-4" style="border: 3px black; border-style:dotted; background-color: white;">coluna 4 partes </div>
             <div class="col-4" style="border: 3px black; border-style:dotted; background-color: red;">coluna 4</div>
         </div>
 
