--- a/Exercicios/BootstrapGrid/exercicio1.html
+++ b/Exercicios/BootstrapGrid/exercicio1.html
@@ -64,25 +64,18 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-4"style="color: white; border: 3px white; border-style:dotted; background-color: rgb(0, 0, 0);">coluna 4 partes</div>
-            <div class="col-4" style="border: 3px black; border-style:dotted; background-color: white;">coluna 4 partes</div>
-            <div class="col-4" style="border: 3px black; border-style:dotted; background-color: red;">coluna 4</div>
-        </div>
-        <br>
-
-        <div class="row">
-            <div class="col-4" style="background-color: gray;">coluna 4</div>
+            <div class="col-4" style="border: 3px black; border-style: dotted; background-color: gray;">coluna 4</div>
             <div class="col-8" style="border: 3px black; border-style: dotted; background-color: grey;">coluna 8 partes 
                 <div class="row">
                     <div class="col-12" style="border: 3px black; border-style:dotted; background-color: white;">coluna 12 partes
                      </div>
                      <div class="row">
                     <div class="col-6" style="border: 3px black; border-style:dotted; background-color: white;">coluna 6 partes </div>
-                    <div class="col-6" style="border: 3px black; border-style:dotted; background-color: red;">coluna 6</div>
+                    <div class="col-6" style="border: 3px black; border-style:double; background-color: red;">coluna 6</div>
                 </div>
             </div>     
         </div>
-    </div>
+        </div>
     </div>
     
 
