--- a/Exercicios/BootsrapComponentes/index.html
+++ b/Exercicios/BootsrapComponentes/index.html
@@ -55,7 +55,7 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/" class="d-block w-100" alt="...">
+            <img src="img/imageHtml.jpg" class="d-block w-100" alt="...">
             <img src="img/" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
