--- a/Exercicios/BootsrapComponentes/index.html
+++ b/Exercicios/BootsrapComponentes/index.html
@@ -51,18 +51,22 @@
       <!-- Fim Nav Bootstrap -->
    </header>
    <section>
-   <div class="container">
+   <div class="container" style="height: 50vh;">
     <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner" >
           <div class="carousel-item active">
-            <img src="img/imageHtml.jpg" class="d-block w-100" alt="...">
-            <img src="img/" class="d-block w-100" alt="...">
+            <img src="img/imageHtml.jpg" class="d-block w-100" alt="..." >            
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="img/imagesCss.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="img/imgBootstrap.png" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -73,8 +77,8 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+        </div>
       </div>
-   </div>
 
    </section>  
 
