--- a/Exercicios/BootstrapExercicios/pagina4.html
+++ b/Exercicios/BootstrapExercicios/pagina4.html
@@ -26,7 +26,7 @@
                         <a class="nav-link active" aria-current="page" href="pagina3.html">Página 3</a>
                         </li>
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="pagina5.html">Página 5</a>
+                    <a class="nav-link active" aria-current="page" href="pagina5.html">Página 5</a>
                   </li>
    
 
