--- a/JavaScriptOperadores/index.html
+++ b/JavaScriptOperadores/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS</title>
 </head>
+ 
+
 
 <body>
     
 </body>
+<script src="script.JS"></script>
 </html>
