--- a/JavaScript Repeticao/exercicio3.html
+++ b/JavaScript Repeticao/exercicio3.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <form action="" id="MeuForm">
         <label for="pnome" title="Informe o nome">
@@ -19,22 +21,32 @@
         <input type="text" id="psobre" />
         <br>
         <br>
-        <input type="button" value="Concatenar" 
-         onclick="MostrarNome()"/>
+        <input type="button" value="Concatenar" onclick="MostrarNome()" />
     </form>
+
+    <br>
+    <br>
+
     <form action="" id="MyCalc">
-        <label for ="pnumber1">Digite o numero1</label>
-        <input type="number" id="pnumber1"> 
+        <label for="pvalor1">Digite o numero1</label>
+        <input type="text" id="pvalor1">
         <br>
-        <label for ="pnumber2">Digite o numero2</label>
-        <input type="number" id="pnumber2"> 
-        
-         
+        <label for="pvalor2">Digite o numero2</label>
+        <input type="text" id="pvalor2">
+
         <br>
-        <input type="button" value="Concatenar" 
-         onclick="MostrarCalc()"/>     
+        <br>
+        <input type="button" value="Somar" onclick="Somar()" />
+        <input type="button" value="Subtrair" onclick="Sub()" />
+        <input type="button" value="Multiplicar" onclick="Mult()" />
+        <input type="button" value="Dividir" onclick="Div()" />
+
+
+
+
     </form>
 
 </body>
 <script src="scriptEx3.js"></script>
+
 </html>
