--- a/ProjetoFinal/SiteEventos/index.html
+++ b/ProjetoFinal/SiteEventos/index.html
@@ -62,14 +62,14 @@
             <section class="car">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/images1.jfif"   alt="..." id="img1">
+                        <img src="img/images1.jfif" class="d-flex"  alt="..." id="img1">
                     </div>
 
                     <div class="carousel-item">
-                        <img src="img/cblevent.jfif"   alt="..." id="img2">
+                        <img src="img/cblevent.jfif" class="d-flex"  alt="..." id="img2">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/rockimg.jfif"  alt="..." id="img3">
+                        <img src="img/rockimg.jfif" class="d-flex " alt="..." id="img3">
                     </div>
                 </div>
 
