--- a/ProjetoFinal/SiteEventos/index.html
+++ b/ProjetoFinal/SiteEventos/index.html
@@ -46,8 +46,8 @@
     </nav><!--fim do nav-->
 </header>
 
-
-<body></body>
+    <!-- acertar img do backgroud -->
+<body background="img/backgroud3.jpeg">
 
 <div class="container">
     <!--inicio do carrossel-->
@@ -95,18 +95,21 @@
 
     </br>
     </br>
+    <h1>--Próximos eventos--</h1>
     <div class="cards">
     <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="img/RBD.jpg" class="card-img-top" alt="..." id="imgCard1" style="height: 300px;">
         <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Rebelde - RBD</p>
+          <p class="card-test">18/11/2023</p>
         </div>
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="img/rhcp.jpg" class="card-img-top" alt="..." id="imgCard2" style="height: 300px">
         <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Red Hot Chili Peppers - RHCP</p>
+          <p class="card-text">10/11/2023</p>
         </div>
       </div>
 
@@ -119,6 +122,10 @@
 
 
 </body>
+
+<footer>
+    <br>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
