--- a/ProjetoFinal/SiteEventos/pagina2.html
+++ b/ProjetoFinal/SiteEventos/pagina2.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MintEvents</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <title>MintEvents-Ingressos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    
 </head>
+
     <header data-bs-theme="dark">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
           <div class="container-fluid">
@@ -19,15 +23,15 @@
                 <li class="nav-item">
                   <a class="nav-link" href="index.html"  href="#">Home</a>
                 </li>
-                <a class="navbar-brand" >Pagina 2</a>
+                <a class="navbar-brand" >Ingressos</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <li class="nav-item">
-                  <a class="nav-link" href="pagina3.html">Pagina 3</a>
+                  <a class="nav-link" href="pagina3.html">Formulário</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pagina4.html">Pagina 4</a>
+                    <a class="nav-link" href="pagina4.html">SignUp</a>
                   </li>
               </ul>
               <form class="d-flex" role="search">
@@ -40,7 +44,50 @@
       </header>
     
 
-<body style="background-color: rgba(7, 94, 7, 0.658);">
+<body >
+  <br>
+  <br>
+  <br>
+<h1>Próximos eventos</h1>
+
+<div class="cardP2">
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="img/RHCPLOGO.jfif" class="img-fluid rounded-start" alt="..." id="imgP21">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">RED HOT CHILI PEPPERS (HRCP)</h5>
+        <p class="card-text">Red Hot Chili Peppers é uma banda de rock dos Estados Unidos formada em Los Angeles, Califórnia, em 1983. O estilo musical do grupo consiste principalmente no funk rock, bem como elementos de outros gêneros, tais como punk, rock alternativo, rap rock e rock psicodélico.</p>
+        <p class="card-text">O grupo musical se apresentará no Brasil dia 10/03/23 as 21h.</p>
+        <p class="card-text"><small class="text-body-secondary">Local:Morumbi - Estádio Cícero Pompeu de Toledo - São Paulo</small>
+        <p class="card-text"><small class="text-body-secondary" >Preencha o formulário para a fila de espera </small> <a href="pagina3.html" class="card-link">aqui. </a> </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<br>
+<br>
+<br>
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="img/RBDLOGO.png" class="img-fluid rounded-start" alt="..." id="imgPD22">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">REBELDE (RBD)</h5>
+        <p class="card-text">RBD é um grupo vocal mexicano de música pop criado a partir da telenovela mexicana Rebelde (2004–06). O grupo, composto por Alfonso Herrera, Anahí, Christian Chávez, Christopher von Uckermann, Dulce María e Maite Perroni, é tido como o grupo de maior êxito do pop mexicano e da América Latina.</p>
+        <p class="card-text">O grupo musical se apresentará no Brasil dia 18/03/23 as 20h.</p>
+        <p class="card-text"><small class="text-body-secondary">Local:Allianz Parque - (Estadio Palestra Itália) - São Paulo</small>
+        <p class="card-text"><small class="text-body-secondary" >Preencha o formulário para a fila de espera </small> <a href="pagina3.html" class="card-link">aqui. </a> </p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 
 </body>
    
