--- a/ProjetoFinal/SiteEventos/index.html
+++ b/ProjetoFinal/SiteEventos/index.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="pagina3.html">Formulário</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pagina4.html">SignUp</a>
+                        <a class="nav-link" href="pagina4.html">Login/SignUp</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -136,9 +136,16 @@
   <div class="card-body">
     <h5 class="card-title">Pré venda disponivel em breve.</h5>
     <p class="card-text">Escolha seu evento e garanta seu ingresso para os próximos eventos entrando na fila para compra <a href="pagina2.html" class="card-link">aqui.</a></p>
-    
-  </div>
+     </div>
 </div>
+
+<div class="card text-bg-dark mb-3" style="max-width: 18rem;" id="cardFooter">
+    <div class="card-header">NÃO PERCA!</div>
+    <div class="card-body">
+      <h5 class="card-title">Fique por dentro das ultimas noticias.</h5>
+      <p class="card-text">Cadastre-se ou faça o Login para ficar por dentro das nossas novidades <a href="pagina4.html" class="card-link">aqui.</a></p>
+       </div>
+  </div>
 
 </footer>
 
