--- a/ProjetoFinal/SiteEventos/pagina2.html
+++ b/ProjetoFinal/SiteEventos/pagina2.html
@@ -31,7 +31,7 @@
                   <a class="nav-link" href="pagina3.html">Formulário</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pagina4.html">SignUp</a>
+                    <a class="nav-link" href="pagina4.html">Login/SignUp</a>
                   </li>
               </ul>
               <form class="d-flex" role="search">
