--- a/ProjetoFinal/SiteEventos/pagina3.html
+++ b/ProjetoFinal/SiteEventos/pagina3.html
@@ -7,6 +7,7 @@
     <title>MintEvents</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+   
 </head>
     <header data-bs-theme="dark">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -41,8 +42,92 @@
       </header>
   
 <body>
-     
-    </body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
+  <br>
+  <br>
+  <br>
+  <h1>Se cadastre para entrar na lista de espera da pré-venda. </h1>
+  <section>
+    <br><br>
+    <div class="container"   id="contForm">
+<form >
+    <div class="mb-3"  id="nome">
+        <label for="pnome" class="form-label" style="color:white">Nome Completo</label>
+        <div id="nomelHelp" class="form-text" style="color:white">Insira seu nome completo.</div>
+        <input type="nome" class="form-control" id="pnome" aria-describedby="nomeHelp">      
+      </div>
+
+      <div class="mb-3" id="endereco">
+        <label for="pendereco" class="form-label" style="color:white">Endereço</label>
+        <div id="emailHelp" class="form-text" style="color:white">Insira seu endereço</div>
+        <input type="endereco" class="form-control" id="InputEndereco" aria-describedby="emailHelp">
+            </div>
+
+            <div class="mb-3" id="documento">
+              <label for="pCpd" class="form-label" style="color:white">CPF</label>
+              <div id="cpfHelp" class="form-text" style="color:white">Insira o número do seu CPF.</div>
+              <input type="documento" class="form-control" id="Inputdocumento" aria-describedby="emailHelp">
+                  </div>
+
+    <div class="mb-3" id="email">
+      <label for="pemail" class="form-label" style="color:white">Email</label>
+      <div id="emailHelp" class="form-text" style="color:white">Insira seu email</div>
+      <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
+      <div id="emailHelp" class="form-text" style="color: red ;" style="color:white">Nunca compartilharemos seu e-mail com mais ninguém</div>
+    </div>
+
+    <div class="mb-3"  id="confEmail">
+        <label for="pconfEmail" class="form-label" style="color:white">Confirmação de Email</label>
+        <div id="emailHelp" class="form-text" style="color:white">Insira o mesmo email</div>
+        <input type="email1" class="form-control" id="InputEmail1">  
+      </div>
+
+    <div class="mb-3" id="senha">
+      <label for="psenha" class="form-label" style="color:white">Senha</label>
+      <div id="senhaHelp" class="form-text" style="color:white">Insira sua senha</div>
+      <input type="password" class="form-control" id="InputPassword">
+      <div id="senhaHelp" class="form-text" style="color: red ;" style="color:white">Nunca compartilharemos sua senha com mais ninguém</div>
+    </div>
+
+    <div class="mb-3"  id="confSenha">
+        <label for="pconfSenha" class="form-label" style="color:white">Confirmação de Senha</label>
+        <div id="senhaHelp" class="form-text" style="color:white">Insira a mesma senha</div>
+        <input type="password" class="form-control" id="InputPassword1">  
+      </div>
+
+      <div class="mb-3" id="evento">
+        <label for="pevento" class="form-label" style="color:white">Escolha o evento</label>
+        <SELECT NAME="NomeEvent">
+          <OPTION VALUE="Event1"> RHTP
+          <OPTION VALUE="Event2"> RBD
+          </SELECT>
+          <br>
+            <br>
+           
+            <div class="mb-3" id="NumeroIngresso">
+               <label for="pNumeroIngresso" class="form-label" style="color:white">Escolha a quantidade de ingressos</label>
+              <SELECT NAME="quantIngressos">
+               <OPTION VALUE="1">1 
+              <OPTION VALUE="2"> 2
+                <OPTION VALUE="3">3 
+                  <OPTION VALUE="4">4 
+                  </SELECT>
+
+
+                  </div>
+
+
+  
+    <button type="submit" class="btn btn-primary" value="Concatenar" onclick="Enviar()" style="color:white">Enviar</button>
+  </form>
+    </div>
+</section>
+
+  <br>
+  <br>
+  <script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+</body>
 
 </html>
+
