--- a/ProjetoFinal/SiteEventos/pagina4.html
+++ b/ProjetoFinal/SiteEventos/pagina4.html
@@ -40,8 +40,12 @@
         </nav>
       </header>
    
-<body style="background-color: rgba(7, 94, 7, 0.658);">
-   
+<body >
+  <br>
+  <br>
+  <br>
+   <h3 style="color:white; margin-left: 10%;">pagina em construção</h3>
+   <img src="img/obras.png" alt="" style="width:20%; height:100px; margin-left: 10%;">
      
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
