--- a/ProjetoFinal/SiteEventos/pagina4.html
+++ b/ProjetoFinal/SiteEventos/pagina4.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MintEvents</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
     <header data-bs-theme="dark">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -20,12 +21,12 @@
                   <a class="nav-link" href="index.html" >Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="pagina2.html">Pagina 2</a>
+                  <a class="nav-link" href="pagina2.html">Ingressos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="pagina3.html">Pagina 3</a>
+                  <a class="nav-link" href="pagina3.html">Formulário</a>
                 </li>
-                <a class="navbar-brand" >Pagina 4</a>
+                <a class="navbar-brand" >Login/SignUp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -39,8 +40,12 @@
         </nav>
       </header>
    
-<body style="background-color: rgba(7, 94, 7, 0.658);">
-   
+<body >
+  <br>
+  <br>
+  <br>
+   <h3 style="color:white; margin-left: 10%;">pagina em construção</h3>
+   <img src="img/obras.png" alt="" style="width:20%; height:100px; margin-left: 10%;">
      
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
