--- a/ProjetoFinal/SiteEventos/index.html
+++ b/ProjetoFinal/SiteEventos/index.html
@@ -34,8 +34,11 @@
                         <a class="nav-link" href="pagina3.html">Formulário</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pagina4.html">Login/SignUp</a>
+                        <a class="nav-link" href="pagina4.html">Login</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pagina5.html">SignUp</a>
+                      </li>
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -143,7 +146,7 @@
     <div class="card-header">NÃO PERCA!</div>
     <div class="card-body">
       <h5 class="card-title">Fique por dentro das ultimas noticias.</h5>
-      <p class="card-text">Cadastre-se ou faça o Login para ficar por dentro das nossas novidades <a href="pagina4.html" class="card-link">aqui.</a></p>
+      <p class="card-text">Cadastre-se<a href="pagina5.html" class="card-link"> aqui</a> ou faça o Login para ficar por dentro das nossas novidades<a href="pagina4.html" class="card-link">aqui</a></p>
        </div>
   </div>
 
