--- a/ProjetoFinal/SiteEventos/pagina4.html
+++ b/ProjetoFinal/SiteEventos/pagina4.html
@@ -26,10 +26,13 @@
                 <li class="nav-item">
                   <a class="nav-link" href="pagina3.html">Formulário</a>
                 </li>
-                <a class="navbar-brand" >Login/SignUp</a>
+                <a class="navbar-brand" >Login</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
+                <li class="nav-item">
+                  <a class="nav-link" href="pagina5.html">SignUp</a>
+                </li>
                 </ul>
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -44,9 +47,40 @@
   <br>
   <br>
   <br>
-   <h3 style="color:white; margin-left: 10%;">pagina em construção</h3>
-   <img src="img/obras.png" alt="" style="width:20%; height:100px; margin-left: 10%;">
+  <br>
+  <br>
+  
      
+   <section>
+    <h2>Login</h2>>
+    <div class="container"   id="contForm">
+<form >
+  <div class="mb-3" id="email">
+    <label for="pemail" class="form-label" style="color:white">Email</label>
+    <div id="emailHelp" class="form-text" style="color:white">Insira seu email</div>
+    <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
+    <div id="emailHelp" class="form-text" style="color: red ;" style="color:white">Nunca compartilharemos seu e-mail com mais ninguém</div>
+  </div>
+
+  
+  <div class="mb-3" id="senha">
+    <label for="psenha" class="form-label" style="color:white">Senha</label>
+    <div id="senhaHelp" class="form-text" style="color:white">Insira sua senha</div>
+    <input type="password" class="form-control" id="InputPassword">
+    <div id="senhaHelp" class="form-text" style="color: red ;" style="color:white">Nunca compartilharemos sua senha com mais ninguém</div>
+  </div>
+
+
+  <button type="submit" class="btn btn-primary" value="Concatenar" onclick="Enviar()" style="color:white">Enviar</button>
+  
+
+</form>
+    </div>
+   </section>
+
+   <br>
+   <br>
+   
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
