--- a/ProjetoFinal/SiteEventos/pagina5.html
+++ b/ProjetoFinal/SiteEventos/pagina5.html
@@ -7,34 +7,33 @@
     <title>MintEvents</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-   
 </head>
     <header data-bs-theme="dark">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
           <div class="container-fluid">
-            <a class="navbar-brand" >Mintevents</a>
+            <a class="navbar-brand" >MintEvents</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                  <a class="nav-link"  href="index.html">Home</a>
+                  <a class="nav-link" href="index.html" >Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="pagina2.html">Ingressos</a>
                 </li>
-                <a class="navbar-brand" >Formulário</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
+                <li class="nav-item">
+                  <a class="nav-link" href="pagina3.html">Formulário</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="pagina4.html">Login</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="pagina5.html">SignUp</a>
-                  </li>
-              </ul>
+                <a class="navbar-brand" >SignUp</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                </ul>
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
@@ -43,15 +42,17 @@
           </div>
         </nav>
       </header>
-  
-<body>
-
+   
+<body >
   <br>
   <br>
   <br>
-  <h1>Se cadastre para entrar na lista de espera da pré-venda. </h1>
-  <section>
-    <br><br>
+  <br>
+  <br>
+   <section>
+    <br>
+    <br>
+    <h2>SingUp</h2>
     <div class="container"   id="contForm">
 <form >
     <div class="mb-3"  id="nome">
@@ -96,41 +97,14 @@
         <label for="pconfSenha" class="form-label" style="color:white">Confirmação de Senha</label>
         <div id="senhaHelp" class="form-text" style="color:white">Insira a mesma senha</div>
         <input type="password" class="form-control" id="InputPassword1">  
-      </div>
-
-      <div class="mb-3" id="evento">
-        <label for="pevento" class="form-label" style="color:white">Escolha o evento</label>
-        <SELECT NAME="NomeEvent">
-          <OPTION VALUE="Event1"> RHTP
-          <OPTION VALUE="Event2"> RBD
-          </SELECT>
-          <br>
-            <br>
-           
-            <div class="mb-3" id="NumeroIngresso">
-               <label for="pNumeroIngresso" class="form-label" style="color:white">Escolha a quantidade de ingressos</label>
-              <SELECT NAME="quantIngressos">
-               <OPTION VALUE="1">1 
-              <OPTION VALUE="2"> 2
-                <OPTION VALUE="3">3 
-                  <OPTION VALUE="4">4 
-                  </SELECT>
-
-
-                  </div>
-
-
-  
-    <button type="submit" class="btn btn-primary" value="Concatenar" onclick="Enviar()" style="color:white">Enviar</button>
-  </form>
     </div>
-</section>
+    <button type="submit" class="btn btn-primary" value="Concatenar" onclick="Enviar()" style="color:white">Enviar</button>
 
-  <br>
-  <br>
-  <script src="script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-</body>
+   <br>
+   <br>
+   
+    </body>
+    <script src="scriptSignUp.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 </html>
-
